# gpstak

./: .gitignore  MANIFEST.in  Makefile  README.md  nfpm.yaml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: build.yml
debian/: gpstak.postinst  gpstak.prerm  gpstak.service  install_pkg_build_deps.sh
src/gpstak/: __init__.py  gpstak.py
tests/: test_gpstak.py
