[metadata]
name = gpstak
version = file: src/gpstak/VERSION
url = https://github.com/snstac/gpstak
project_urls =
  CI: GitHub Actions = https://github.com/snstac/gpstak/actions
  GitHub: issues = https://github.com/snstac/gpstak/issues
  GitHub: repo = https://github.com/snstac/gpstak
description = Feed gpsd position to TAK clients as network GPS.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sensors & Signals LLC
maintainer_email = oss@snstac.com
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Development Status :: 4 - Beta
  Operating System :: POSIX
keywords =
  Cursor on Target
  CoT
  TAK
  ATAK
  WinTAK
  GPS
  gpsd

[options]
packages = find:
package_dir =
  = src
include_package_data = True
python_requires = >=3.9, <4
install_requires =
  pytak >= 7.3.12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  gpstak = gpstak.gpstak:cli_main

[options.extras_require]
test =
  pytest
  pytest-cov
  pylint
  flake8
  black

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
